# c_hs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.toml  README.md  build.sh
.github/workflows/: ci.yml
examples/: cert.pem  example.c  key.pem
include/: hs.h  hs_constants.h  hs_external_libs.h  hs_io.h  hs_openssl.h  hs_parser.h  hs_route.h  hs_router.h  hs_routes.h  hs_routes_auth.h  hs_routes_common.h  hs_routes_error.h  hs_routes_favicon.h  hs_routes_fs.h  hs_routes_payload_limit.h  hs_routes_powered_by.h  hs_routes_ratelimit.h  hs_routes_redirection.h  hs_routes_security.h  hs_routes_session.h  hs_routes_static.h  hs_server.h  hs_socket.h  hs_types.h  hs_types_array.h  hs_types_cookie.h
sessions/: 168169277716304295001714636915SID
src/: hs_constants.c  hs_io.c  hs_openssl.c  hs_parser.c  hs_route.c  hs_router.c  hs_routes.c  hs_routes_auth.c  hs_routes_common.c  hs_routes_error.c  hs_routes_favicon.c  hs_routes_fs.c  hs_routes_payload_limit.c  hs_routes_powered_by.c  hs_routes_ratelimit.c  hs_routes_redirection.c  hs_routes_security.c  hs_routes_session.c  hs_routes_static.c  hs_server.c  hs_socket.c  hs_types.c  hs_types_array.c  hs_types_cookie.c
tests/: test.c  test.h  test_constants_file_extension_to_mime_type.c  test_hs_routes_error_404_not_found_route_serve.c  test_hs_routes_error_411_length_required_route_serve.c  test_hs_routes_favicon_serve.c  test_hs_routes_payload_limit_route_serve.c  test_hs_routes_powered_by_route_serve.c  test_hs_routes_ratelimit_max_connection_requests_route_serve.c  test_hs_routes_ratelimit_max_connection_time_route_serve.c  test_hs_routes_redirection_serve.c  test_hs_routes_security_basic_auth_serve.c  test_hs_routes_security_headers_serve.c  test_hs_routes_session_new_session.c  test_hs_routes_session_route_generate_cookie_id.c  test_hs_routes_session_route_serve.c  test_hs_routes_session_route_session_from_string.c  test_hs_routes_session_route_session_read_write_file_based_storage.c  test_hs_routes_session_route_session_to_string.c  test_hs_routes_static_serve.c  test_io_read_line.c  test_io_read_line_no_buffer.c  test_io_read_line_no_socket.c  test_io_write_file_to_socket.c  test_io_write_string_to_socket.c  test_parser_create_request_from_url.c  test_parser_parse_cookie_header.c  test_parser_parse_header.c  test_parser_parse_method.c  test_parser_parse_protocol_from_url.c  test_parser_parse_query_string.c  test_parser_parse_request.c  test_parser_parse_request_line.c  test_route_is_allowed_for_method.c  test_route_is_supported_path.c  test_route_release_post_response_callback.c  test_route_release_redirect_response.c  test_route_release_route.c  test_route_release_serve_response.c  test_router_as_route.c  (+38 more)
